kubernetes/nginx-demo/nginx-demo-namespace.yaml
---
# Creating demo namespace
apiVersion: v1
kind: Namespace
metadata:
  name: demo
