kubernetes/nginx-demo/nginx-demo-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: demo
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: nfs-vol
          mountPath: /var/nfs # The mountpoint inside the container
      volumes:
      - name: nfs-vol
        nfs:
          server: nfs.local.timo.be # IP to our NFS server
          path: /mnt/X.A.N.A./media/other # The exported directory
