kubernetes/nginx-demo/nginx-demo-traefik.yaml
---
# Allowing traefik to route to nginx pods
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: nginx
          port: 80
